# soloH

h1/: index.html  main.js  quantum.worker.js  style.css
h10/: CMakeLists.txt
h10/src/: GLWidget.cpp  GLWidget.h  GrayScottSolver.cu  GrayScottSolver.h  MainWindow.cpp  MainWindow.h  ParameterScan.cpp  ParameterScan.h  Statistics.cpp  Statistics.h  VideoRecorder.cpp  VideoRecorder.h  main.cpp
h100/: config.yaml  main.py  requirements.txt
h11/: requirements.txt  test_fixes.py  test_implementation.py  test_new_features.py
h12/: main.py  requirements.txt  test_advanced_features.py  test_algorithm.py  test_fixes.py
h13/: go.mod
h15/: __init__.py  dncnn.py  gui.py  kspace.py  kt_slr.py  main.py  metrics.py  nufft_recon.py  phantom.py  reconstruction.py  undersampling.py  wavelet.py
h16/: CMakeLists.txt  Makefile  build.bat  build.ps1  verify_logic.py  verify_new_features.py
h16/examples/: cell_cycle.txt  cycle_network.txt  simple_network.txt
h16/include/: boolean_network.h
h16/src/: boolean_network.cpp  main.cpp
h17/: README.md  __init__.py  config.py  cpml.py  curvilinear_grid.py  fd_coefficients.py  main.py  medium.py  parallel.py  receiver.py  requirements.txt  solver.py  solver_central.py  solver_simple.py  solver_staggered.py  source.py  test_advanced_features.py  test_anisotropy.py  test_basic.py  test_basic_eq.py  test_bugfixes.py  test_central.py  test_derivative.py  test_main_solver.py  test_simple.py  test_simple_solver.py  test_simulation.py  test_stability.py  test_staggered.py  visualization.py
h18/: app.py  requirements.txt  test_advanced_api.py  test_advanced_models.py  test_api.py  test_api_auto.py  test_fixes.py  test_system.py
h19/: app.js  index.html  main.js  package-lock.json  package.json  styles.css
h20/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
h20/backend/: .env.example  README.md  pyproject.toml  requirements.txt  run.py
h20/backend/app/: main.py
h20/backend/app/api/: __init__.py  addresses.py  analysis.py  dependencies.py  tasks.py  transactions.py
h20/backend/app/core/: config.py  database.py
h20/backend/app/models/: __init__.py  analysis.py  base.py  blockchain.py  task.py
h20/backend/app/repositories/: __init__.py  address_repository.py  base.py  cluster_repository.py  graph_repository.py  pattern_repository.py  task_repository.py  transaction_repository.py
h20/backend/app/schemas/: __init__.py  analysis.py  blockchain.py  common.py  graph.py  task.py
h20/backend/app/services/: __init__.py  address_service.py  base.py  clustering_service.py  gnn_service.py  graph_service.py  pattern_service.py  privacy_coin_service.py  report_service.py  task_service.py  transaction_service.py
h20/backend/app/tasks/: __init__.py  analysis_tasks.py  base_task.py  celery_app.py  import_tasks.py
h20/backend/app/utils/: __init__.py  mock_data_generator.py
h20/backend/data/: sample_transactions.csv
h20/backend/migrations/: 001_init.sql
h20/backend/scripts/: generate_mock_data.py
h21/: main.py  requirements.txt  test_new_features.py
h22/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
h23/: Makefile  README.md  build.ps1  go.mod  sample-config.json
h24/: README.md  requirements.txt  test_new_features.py
h27/: CMakeLists.txt  chaoticsystems.cpp  chaoticsystems.h  dataexporter.cpp  dataexporter.h  fftanalyzer.cpp  fftanalyzer.h  lyapunovcalculator.cpp  lyapunovcalculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  odesolver.cpp  odesolver.h  phaseplot3d.cpp  phaseplot3d.h  plotwidget.cpp  plotwidget.h
h3/: CMakeLists.txt
h3/include/: izhikevich_neuron.h  network_simulator.h  real_time_plot.h
h3/scripts/: plot_mea_results.py  plot_results.py
h3/src/: izhikevich_neuron.cpp  main.cpp  network_simulator.cpp  real_time_plot.cpp
h30/: CMakeLists.txt  Makefile  build.bat  verify_fixes.py  verify_new_features.py
h30/include/: alice.h  bb84.h  bob.h  cascade.h  config.h  decoy_state.h  eve.h  fiber_model.h  mdi_qkd.h  privacy_amplification.h  quantum.h  stats.h  types.h  utils.h
h30/src/: alice.cpp  bb84.cpp  bob.cpp  cascade.cpp  decoy_state.cpp  eve.cpp  fiber_model.cpp  main.cpp  mdi_qkd.cpp  privacy_amplification.cpp  quantum.cpp  stats.cpp  utils.cpp
h33/cpp/: CMakeLists.txt
h33/cpp/include/: common.hpp  ellipsoidal_fit.hpp  fof.hpp  gadget_reader.hpp  merger_tree.hpp  modified_gravity.hpp  substructure.hpp
h33/cpp/src/: ellipsoidal_fit.cpp  fof.cpp  gadget_reader.cpp  merger_tree.cpp  modified_gravity.cpp  pybindings.cpp  substructure.cpp
h38/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
h38/app/: config.py  constants.py
h38/app/api/: __init__.py  dependencies.py  schemas.py
h38/app/api/v1/: __init__.py  health.py  routes.py
h38/app/cache/: __init__.py  redis_cache.py
h38/app/data_processing/: __init__.py  genome_handler.py  sequence_encoder.py  sequence_utils.py
h38/app/epigenomics/: __init__.py  chromatin_accessibility.py  editing_efficiency.py  repair_pathway.py
h38/app/filtering/: __init__.py  results_filter.py
h38/app/models/: __init__.py  crispr_model.py  model_utils.py
h38/app/offtarget_search/: __init__.py  offtarget_finder.py  search_algorithm.py
h38/app/visualization/: __init__.py  igv_linker.py
h38/scripts/: download_genome.py  train_model.py
h38/tests/: test_api.py  test_bugfixes.py  test_epigenomics.py  test_sequence_utils.py
h55/: CMakeLists.txt  README.md  build.bat  build.sh  example.fasta  known_sites.bed  test_sequences.fasta  validate.py
h55/include/: em_algorithm.h  gibbs_sampler.h  output_formatter.h  prior_knowledge.h  pwm.h  rna_structure.h  sequence.h  statistics.h  tcm_model.h
h55/src/: main.cpp
h69/: CMakeLists.txt  build.bat  build.sh
h69/include/hbsolver/: analysis.h  circuit.h  envelope.h  fft.h  hbsolver.h  loadpull.h  matrix.h  memory.h  nonlinear.h  output.h  types.h
h69/src/: analysis.cpp  circuit.cpp  envelope.cpp  fft.cpp  hbsolver.cpp  loadpull.cpp  main.cpp  matrix.cpp  memory.cpp  nonlinear.cpp  output.cpp
(+1569 files in other folders)
