[tool.poetry]
name = "bitcoin-trade-analysis-backend"
version = "0.1.0"
description = "Bitcoin Transaction Graph Analysis Backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.0"
celery = "^5.4.0"
redis = "^5.0.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
networkx = "^3.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
timescaledb = "^0.18.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "Q",
    "RUF",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "S101",
    "S311",
    "S603",
    "S607",
]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]
case-sensitive = true
force-single-line = false
force-wrap-aliases = true
lines-after-imports = 2
lines-between-types = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --strict-config --strict-markers"
